ovoweb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ovoweb
  labels:
    app: ovoweb-app
spec:
  selector:
    matchLabels:
      app: ovoweb-app
  replicas: 1
  template:
    metadata:
      labels:
        app: ovoweb-app
    spec:
      volumes:
        - name: pv-ovoweb
          persistentVolumeClaim:
            claimName: pvc-ovoweb
        - name: nginx-config-volume
          configMap:
            name: nginx-config
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
          volumeMounts:
            - name: pv-ovoweb
              mountPath: /var/www/html
            - name: nginx-config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 120
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 120
            periodSeconds: 15
            timeoutSeconds: 5
        - name: php-fpm
          image: kevin91nl/datablogger
          ports:
            - containerPort: 9000
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 2
          volumeMounts:
            - name: pv-ovoweb
              mountPath: /var/www/html
