ovoweb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ovoweb-svc
spec:
  ports:
    - name: http
      port: 9000
      targetPort: http
  selector:
    app: ovoweb

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: nginx
  type: NodePort
